# eQuimage

./: .gitignore  INFOS  LICENSE  PKG-INFO  README.md  pyproject.toml  setversion
.github/workflows/: python-publish.yml
misc/: CTdata.py  HSVwheel.py  noise_wavelets.py  setversion
src/eQuimage/: Unistellar_images.py  __init__.py  eQuimage.css  eQuimage.mplstyle  eQuimage.py  gtkhelpers.py  imageprocessing.py  imageprocessing_utils.py
src/eQuimage/config/: eQuimage.css  eQuimage.mplstyle
src/eQuimage/gui/: base.py  editors.py  lightcurve.py  logs.py  luma.py  mainmenu.py  mainwindow.py  menus.py  settings.py  statistics.py  toolmanager.py
src/eQuimage/gui/gtk/: customwidgets.py  filechoosers.py  keyboard.py  signals.py  utils.py
src/eQuimage/gui/misc/: imagechooser.py  utils.py
src/eQuimage/gui/tools/: addframe.py  arcsinh.py  bilateral.py  blackpoint.py  blend.py  butterworth.py  clahe.py  colorbalance.py  colornoise.py  colorsaturation.py  darkmask.py  gaussian.py  ghscolorsat.py  grayscale.py  hotpixels.py  hyperbolic.py  midtone.py  nlmeans.py  pixelmath.py  resample.py  stretch.py  switch.py  thresholdmask.py  totalvariation.py  unsharp.py  wavelets.py
src/eQuimage/imageprocessing/: Unistellar.py  colors.py  colorspace.py  defs.py  helpers.py  imageprocessing.py  pixelmath.py  stretchfunctions.py  utils.py
src/eQuimage/images/: splash.xcf
src/eQuimage/windows/: addframe.py  arcsinh.py  asinh.py  base.py  bilateral.py  blackpoint.py  blend.py  butterworth.py  clahe.py  colorbalance.py  colornoise.py  colorsaturation.py  darkmask.py  gaussian.py  ghscolorsat.py  grayscale.py  helpers.py  hotpixels.py  hyperbolic.py  imagechooser.py  log.py  logs.py  luma.py  luminance.py  mainmenu.py  mainwindow.py  midtone.py  nlmeans.py  picker.py  settings.py  splash.py  statistics.py  stretch.py  switch.py  tools.py  totalvariation.py  unsharp.py  utils.py  wavelets.py
src/eQuimage/windows/gtk/: customwidgets.py  filechoosers.py  signals.py  utils.py
src/eQuimageGtk/: __init__.py  eQuimage.py
src/eQuimageGtk/config/: eQuimage.mplstyle
src/eQuimageGtk/gui/: base.py  editors.py  lightcurve.py  logs.py  luma.py  mainwindow.py  menus.py  settings.py  statistics.py  toolmanager.py
src/eQuimageGtk/gui/gtk/: customwidgets.py  filechoosers.py  keyboard.py  signals.py  utils.py
src/eQuimageGtk/gui/misc/: imagechooser.py  utils.py
src/eQuimageGtk/gui/tools/: addframe.py  arcsinh.py  bilateral.py  blackpoint.py  blend.py  butterworth.py  clahe.py  colorbalance.py  colornoise.py  colorsaturation.py  gaussian.py  ghscolorsat.py  grayscale.py  hotpixels.py  hyperbolic.py  midtone.py  nlmeans.py  pixelmath.py  resample.py  stretch.py  switch.py  thresholdmask.py  totalvariation.py  unsharp.py  (+1 more)
src/eQuimageGtk/imageprocessing/: Unistellar.py  colors.py  defs.py  imageprocessing.py  pixelmath.py  stretchfunctions.py  utils.py
src/equimage/: __init__.py  helpers.py  image.py  image_colors.py  image_colorspaces.py  image_editors.py  image_filters.py  image_geometry.py  image_hdr.py  image_hdr.v1.py  image_io.py  image_masks.py  image_multiscale.py  image_skimage.py  image_stars.py  image_stats.py  image_stretch.py  image_utils.py  imports.py  params.py  stretchfunctions.py
