[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eQuimage"
version = "1.0.1"
authors = [
  { name = "Yann-Michel Niquet", email = "contact@ymniquet.fr" },
]
description = "eQuimage is a tool to postprocess astronomical images from Unistellar telescopes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib >= 3.0",
    "scipy",
    "pillow",
    "PyGObject >= 3.0",
]

[project.urls]
homepage = "https://astro.ymniquet.fr/"
repository = "https://github.com/ymniquet/eQuimage"

[project.gui-scripts]
eQuimage = "eQuimage.eQuimage:run"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
eQuimage = ["eQuimage.mplstyle", "icon.png", "icon.ico"]
"eQuimage.icons" = ["icon.png", "icon.ico"]
