[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eQuimage"
version = "1.6.1"
authors = [
  { name = "Yann-Michel Niquet", email = "contact@ymniquet.fr" },
]
description = "eQuimage is a tool to postprocess astronomical images from Unistellar telescopes."
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib >= 3.0",
    "scipy",
    "pywavelets",
    "pillow",
    "tifffile",
    "imagecodecs",
    "astropy",
    "scikit-image >= 0.21.0",
    "PyGObject >= 3.0",
    "dask"
]

[project.urls]
homepage = "https://astro.ymniquet.fr/"
repository = "https://github.com/ymniquet/eQuimage"

[project.gui-scripts]
eQuimage = "eQuimageGtk.eQuimage:run"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"eQuimageGtk.config" = ["eQuimage.css", "eQuimage.mplstyle"]
"eQuimageGtk.images" = ["splash.png"]
"eQuimageGtk.icons" = ["icon.png", "icon.ico"]

